# docmeta

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.crumbs/: add-anyhow-context-to-rename-file-call-in-main-rs.md  add-crumbs-index-csv-to-gitignore.md  add-github-actions-ci-workflow.md  add-installation-instructions-to-readme.md  add-must-use-to-all-public-result-returning-functions.md  add-recursive-directory-traversal-option.md  add-rustdoc-to-pdf-mobi-utils-and-cli-modules.md  add-tests-for-get-year-edge-cases.md  collect-files-accept-impl-asref-str-instead-of-string.md  config.toml  document-date-vs-year-metadata-key-inconsistency.md  document-pre-commit-hook-setup-in-readme-contributing.md  epub-rs-key-to-string-to-case-remove-intermediate-allocation.md  epub-rs-mobi-rs-remove-unnecessary-to-owned-before-get-year.md  expand-test-coverage-for-rename-file-module.md  fix-epub-rs-breakage-from-epub-crate-2-1-5-api-change.md  fix-get-unique-value-modulus-doc-says-4-digits-but-uses-10-0.md  fix-panic-risk-in-get-year-byte-slice-indexing.md  fix-stale-doc-comment-in-rename-file-rs.md  fix-uninterpolated-error-string-in-pdf-rs.md  get-extension-return-cow-or-str-instead-of-owned-string.md  get-field-macro-replace-clone-with-a-free-function.md  get-year-eliminate-double-allocation-in-non-early-return-pat.md  harden-filename-character-sanitisation.md  main-rs-log-error-calls-to-string-on-dyn-error-unnecessarily.md  main-rs-replace-empty-str-workaround-with-map-string-as-str.md  metadata-hashmap-replace-unknown-sentinel-with-option-string.md  remove-ignore-from-utils-rs-doctests-fix-epub-rs-doctest.md  rename-file-chained-replace-calls-produce-many-intermediate.md  rename-file-replace-expect-on-systemtime-with-unwrap-or-fall.md  rename-file-to-string-lossy-called-multiple-times-on-same-pa.md  rename-file-trim-to-string-always-clones-the-string.md  replace-box-dyn-error-with-thiserror-error-enums.md  walker-rs-change-pub-fn-collect-files-to-pub-crate.md  walker-tests-replace-to-string-lossy-to-string-with-into-own.md
.trunk/: trunk.yaml
src/: CHANGELOG.md  cli.rs  epub.rs  (+6 more)
(+1 files in other folders)
