[package]
name = "docmeta"
version = "0.3.5"
authors = ["Even Solberg"]
edition = "2021"
include = ["src/main.rs", "README.md"]
description = "A command line tool for displaying metadata in ebooks and renaming the files based on the metadata."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "color"] }
convert_case = "0.6.0"
env_logger = "0.11.5"
epub = "2.1.2"
log = "0.4.22"
mobi = "0.8.0"
pdf = "0.9.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
