[package]
name = "docmeta"
version = "0.4.0"
authors = ["Even Solberg"]
edition = "2021"
include = ["src/main.rs", "README.md"]
description = "A command line tool for displaying metadata in ebooks and renaming the files based on the metadata."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["cargo", "color"] }
convert_case = "0.11.0"
env_logger = "0.11.10"
epub = "2.1.5"
log = "0.4.29"
mobi = "0.8.0"
pdf = "0.10.0"
walkdir = "2.5.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
tempfile = "3.27.0"
