[package]
name = "docmeta"
version = "0.4.1"
authors = ["Even Solberg"]
edition = "2024"
rust-version = "1.85"
description = "A command line tool for displaying metadata in ebooks and renaming the files based on the metadata."
exclude = ["tests/fixtures/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.6.0", features = ["cargo", "color"] }
convert_case = "0.11.0"
env_logger = "0.11.10"
epub = "2.1.5"
log = "0.4.29"
mobi = "0.8.0"
pdf = "0.10.0"
thiserror = "2"
walkdir = "2.5.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
tempfile = "3.27.0"
